--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -51,7 +51,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
     overflow: hidden;
     width: 100%;
     height: 100%; }
@@ -59,7 +58,6 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 0;
     max-width: none;
     -webkit-transform: translateY(-50%) translateX(-50%);
             transform: translateY(-50%) translateX(-50%); }
@@ -70,7 +68,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
     width: 100%;
     height: 100%; }
   .qazana .qazana-invisible {
@@ -890,45 +887,6 @@
   font-size: 14px;
   line-height: 1.5; }
 
-/*
-.qazana-piechart {
-  .qazana-piechart- {
-    &number- {
-      &prefix {
-        flex-grow: 1;
-        text-align: $end;
-      }
-
-      &suffix {
-        flex-grow: 1;
-        text-align: $start;
-      }
-    }
-
-  }
-}
-
-.qazana-piechart-number {
-  position: relative;
-  border: 1px solid grey;
-  border-radius: 50%;
-  text-align: center;
-
-  canvas {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .qazana-piechart-piechart-number {
-    position: relative;
-    overflow: hidden;
-    margin: 0 auto;
-    margin-bottom: 22px;
-    width: 160px;
-    height: 160px;
-    line-height: 160px;
-  }
-}*/
 .qazana-piechart {
   position: relative;
   text-align: center; }
@@ -1534,6 +1492,25 @@
 
 .qazana-social-icons-wrapper {
   font-size: 0; }
+  .qazana-social-icons-wrapper.qazana-social-icons-align-justify {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch; }
+    .qazana-social-icons-wrapper.qazana-social-icons-align-justify .qazana-social-icon {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
   .qazana-social-icons-wrapper .qazana-social-icon {
     font-size: 16px;
     text-align: center;
