--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -68,7 +68,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: $under-layer;
+    //z-index: $under-layer;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -78,7 +78,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: $ground-layer;
+    //z-index: $ground-layer;
     max-width: none;
     transform: translateY(-50%) translateX(-50%);
   }
@@ -93,7 +93,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: $ground-layer;
+    //z-index: $ground-layer;
     width: 100%;
     height: 100%;
   }
