--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -68,6 +68,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%; }
   .qazana .qazana-invisible {
@@ -1169,7 +1170,8 @@
   .qazana-icon:hover {
     color: #818a91; }
   .qazana-icon i,
-  .qazana-icon svg {
+  .qazana-icon svg,
+  .qazana-icon img {
     width: 1em;
     height: 1em; }
   .qazana-icon .svg-baseline svg {
