--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -93,7 +93,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    //z-index: $ground-layer;
+    z-index: $ground-layer-overlay;
     width: 100%;
     height: 100%;
   }
