--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -247,6 +247,59 @@ body {
 .qazana-hidden {
   display: none; }
 
+.qazana-panel-alert {
+  padding: 15px;
+  border-left: 5px solid transparent;
+  position: relative;
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: left; }
+  .qazana-panel-alert.qazana-panel-alert-info {
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bcdff1; }
+  .qazana-panel-alert.qazana-panel-alert-success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #cae6be; }
+  .qazana-panel-alert.qazana-panel-alert-warning {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #f9f0c3; }
+  .qazana-panel-alert.qazana-panel-alert-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #e8c4c4; }
+
+.qazana-label {
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+  text-transform: capitalize; }
+  .qazana-label.qazana-label-default {
+    background-color: #a0a5aa; }
+  .qazana-label.qazana-label-info {
+    background-color: #5bc0de; }
+  .qazana-label.qazana-label-success {
+    background-color: #5cb85c; }
+  .qazana-label.qazana-label-warning {
+    background-color: #f0ad4e; }
+  .qazana-label.qazana-label-danger {
+    background-color: #d9534f; }
+
+.qazana-descriptor, .qazana-panel #qazana-panel-page-editor .qazana-control-description {
+  font-size: 11px;
+  font-style: italic;
+  line-height: 1.4;
+  color: #a0a5aa; }
+
 .qazana-button {
   outline: none;
   border: none;
@@ -1661,37 +1714,37 @@ select {
   .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li {
     float: left;
     width: 20%; }
-    .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li .qazana-link-dimensions,
-    .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li input {
+    .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li input,
+    .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li .qazana-link-dimensions {
       display: block;
+      text-align: center;
       width: 100%;
-      height: 27px;
       border-color: #a0a5aa;
-      text-align: center; }
+      height: 27px; }
     .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li input {
-      padding: 4px 0;
       border-left: none;
-      border-radius: 0; }
-      .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li input + span {
-        display: block;
-        padding-top: 5px;
-        color: #ddd;
-        text-align: center;
-        text-transform: uppercase;
-        font-size: 9px; }
-      .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li input:focus + span {
+      border-radius: 0;
+      padding: 4px 0; }
+      .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li input:focus + .qazana-control-dimension-label {
         color: #a0a5aa; }
     .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li .qazana-link-dimensions {
-      padding: 0;
-      outline: none;
       border: 1px solid #a0a5aa;
       border-left: none;
-      border-radius: 0 3px 3px 0;
       background-color: #fff;
+      padding: 0;
+      outline: none;
+      border-radius: 0 3px 3px 0;
       cursor: pointer; }
     .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions li:first-child input {
       border-left: 1px solid #a0a5aa;
       border-radius: 3px 0 0 3px; }
+  .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions .qazana-control-dimension-label {
+    display: block;
+    text-align: center;
+    color: #ddd;
+    font-size: 9px;
+    text-transform: uppercase;
+    padding-top: 5px; }
   .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions .qazana-link-dimensions.unlinked {
     background-color: #fff; }
     .qazana-panel #qazana-panel-page-editor .qazana-control-type-dimensions .qazana-link-dimensions.unlinked .qazana-linked {
