--- a/assets/dev/scss/editor/_global.scss
+++ b/assets/dev/scss/editor/_global.scss
@@ -81,3 +81,80 @@
 .qazana-hidden {
 	display: none;
 }
+
+// Alert
+.qazana-panel-alert {
+	padding: 15px;
+	border-left: 5px solid transparent;
+	position: relative;
+	font-size: 12px;
+	line-height: 1.5;
+	text-align: $start;
+
+	&.qazana-panel-alert- {
+
+		&info {
+			color: $info-text;
+			background-color: $info-bg;
+			border-color: $info-border;
+		}
+
+		&success {
+			color: $success-text;
+			background-color: $success-bg;
+			border-color: $success-border;
+		}
+
+		&warning {
+			color: $warning-text;
+			background-color: $warning-bg;
+			border-color: $warning-border;
+		}
+
+		&danger {
+			color: $danger-text;
+			background-color: $danger-bg;
+			border-color: $danger-border;
+		}
+	}
+}
+.qazana-label {
+	display: inline;
+	padding: .2em .6em .3em;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	color: #fff;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: .25em;
+	text-transform: capitalize;
+
+	&.qazana-label-default {
+		background-color: $editor-light;
+	}
+
+	&.qazana-label-info {
+		background-color: $info;
+	}
+
+	&.qazana-label-success {
+		background-color: $success;
+	}
+
+	&.qazana-label-warning {
+		background-color: $warning;
+	}
+
+	&.qazana-label-danger {
+		background-color: $danger;
+	}
+}
+
+.qazana-descriptor {
+	font-size: 11px;
+	font-style: italic;
+	line-height: 1.4;
+	color: $editor-light;
+}
