--- a/assets/dev/scss/editor/panel/_control.scss
+++ b/assets/dev/scss/editor/panel/_control.scss
@@ -449,7 +449,9 @@
 		}
 	}
 	// Dimensions Control
+	// Dimensions Control
 	.qazana-control-type-dimensions {
+
 		.qazana-control-dimensions {
 			overflow: hidden;
 		}
@@ -458,47 +460,43 @@
 			float: left;
 			width: 20%;
 
-			.qazana-link-dimensions,
-			input {
+			input,
+			.qazana-link-dimensions {
 				display: block;
-				width: 100%;
-				height: 27px;
-				border-color: $editor-light;
 				text-align: center;
+				width: 100%;
+				border-color: $editor-light;
+				height: 27px;
 			}
 
 			input {
-				padding: 4px 0;
 				border-left: none;
 				border-radius: 0;
+				padding: 4px 0;
 
 				+ span {
-					display: block;
-					padding-top: 5px;
-					color: $editor-lightest;
-					text-align: center;
-					text-transform: uppercase;
-					font-size: 9px;
 				}
 
 				&:focus {
-					+ span {
+
+					+ .qazana-control-dimension-label {
 						color: $editor-light;
 					}
 				}
 			}
 
 			.qazana-link-dimensions {
-				padding: 0;
-				outline: none;
 				border: 1px solid $editor-light;
 				border-left: none;
-				border-radius: 0 3px 3px 0;
 				background-color: #fff;
+				padding: 0;
+				outline: none;
+				border-radius: 0 3px 3px 0;
 				cursor: pointer;
 			}
 
 			&:first-child {
+
 				input {
 					border-left: 1px solid $editor-light;
 					border-radius: 3px 0 0 3px;
@@ -506,7 +504,17 @@
 			}
 		}
 
+		.qazana-control-dimension-label {
+			display: block;
+			text-align: center;
+			color: $editor-lightest;
+			font-size: 9px;
+			text-transform: uppercase;
+			padding-top: 5px;
+		}
+
 		.qazana-link-dimensions {
+
 			&.unlinked {
 				background-color: #fff;
 
