--- a/assets/dev/scss/editor/panel/_color-picker.scss
+++ b/assets/dev/scss/editor/panel/_color-picker.scss
@@ -9,6 +9,7 @@
 		border: solid #fff;
 		border-width: 0 17px 0 12px;
 		padding-top: 10px;
+		box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 
 		.wp-color-result {
 			float: right;
@@ -92,5 +93,23 @@
 	~ .wp-picker-holder {
 		clear: both;
 		margin-bottom: 15px;
+	}
+}
+
+.qazana-control {
+
+	.wp-picker-container {
+
+		&:not(.wp-picker-active) {
+			float: $end;
+		}
+
+		&.wp-picker-active {
+			transform: translateY(6px);
+
+			.wp-color-result {
+				margin-right: 3px;
+			}
+		}
 	}
 }
