--- a/assets/dev/scss/editor/panel/_element-settings.scss
+++ b/assets/dev/scss/editor/panel/_element-settings.scss
@@ -24,7 +24,7 @@
 			}
 		}
 
-		&.qazana-tab-control-advanced {
+		&.qazana-tab-control-advanced, &.qazana-tab-control-settings {
 			a:before {
 				content: '\f013';
 			}
