--- a/assets/dev/scss/common/common.scss
+++ b/assets/dev/scss/common/common.scss
@@ -1,3 +1,6 @@
+// Dialog
+@import "dialog";
+
 // Responsive video
 
 .qazana-video-wrapper {
@@ -10,4 +13,8 @@
 		height: 100%;
 		width: 100%;
 	}
+}
+
+.qazana-hidden {
+	display: none;
 }
