--- a/assets/dev/scss/frontend/_shapes.scss
+++ b/assets/dev/scss/frontend/_shapes.scss
@@ -32,7 +32,7 @@
 
 	svg {
 		display: block;
-		width: calc(100% + 1px);
+		width: calc(100% + 1.3px);
 		position: relative;
 		left: 50%;
 		transform: translateX(-50%);
@@ -41,5 +41,6 @@
 	.qazana-shape-fill {
 		fill: #fff;
 		transform-origin: center;
+		transform: rotateY(0deg); // Reset default for safari
 	}
 }
