--- a/assets/dev/scss/helpers/mixins.scss
+++ b/assets/dev/scss/helpers/mixins.scss
@@ -51,4 +51,39 @@
 		@include placeholder-style();
 	}
 }
+
+@mixin button-types( $selector ) {
+
+	@each $type, $color in (
+		info: $info,
+		success: $success,
+		warning: $warning,
+		danger: $danger
+	) {
+		&#{$type} #{$selector} {
+			background-color: $color;
+		}
+	}
+}
+
+@mixin visibility() {
+	@media (max-width: $screen-sm-max) {
+		.qazana-hidden-phone {
+			@content;
+		}
+	}
+
+	@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
+		.qazana-hidden-tablet {
+			@content;
+		}
+	}
+
+	@media (min-width: $screen-lg-min) {
+		.qazana-hidden-desktop {
+			@content;
+		}
+	}
+}
+
 //End
